2001-12-11  Mo DeJong  <supermo@bayarea.net>

	Patch 243, based on poll of user base.
	* src/option.cpp (ExpandAtFileArgument, GetErrorMessage):
	Revert modifications to @file processing made on
	2001-11-01. Only one file name per line is supported.
	Remove unused error condition.
	* src/option.h (UNTERMINATED_QUOTE): Remove unused
 	error condition.

2001-12-10  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/expr.cpp (ProcessClassInstanceCreationExpression): Yet
	another case of bug 2377, bad for-loop scoping in VC++.

2001-12-09  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessTryStatement): Update finally blocks to
	"interrupt" other abrupt completions when the finally block itself
	completes abruptly. Also, check for duplicated unchecked
	exceptions in catch clauses - bug 1858.
	* src/bytecode.cpp (EmitTryStatement, ProcessAbruptExit, IsNop):
	Add optimizations for empty finally statement.
	* src/bytecode.h (IsNop): New method.
	* src/error.h:
	* src/error.cpp (UNREACHABLE_DEFAULT_CATCH_CLAUSE): Delete, since
	it is no longer possible to detect.
	* src/expr.cpp:
	* src/init.cpp: Remove attempts to track unchecked exceptions in
	the TryExceptionTableStack: since Sun claims that all
	non-duplicate unchecked exception clauses are reachable, it was
	not worth the extra effort.
	* src/semantic.h (class NestingLevelStack): Added to track abrupt
	finally clauses - patch 240.

2001-12-08  Eric Blake  <ebb9@email.byu.edu>

	* src/java.g: Update parser to track generated blocks.
	* src/javaact.cpp: Regenerate.
	* src/ast.cpp: Fix some AST display issues.
	* src/unparse.cpp (AstBlock::Unparse): Revert patch 134, while
	still ensuring that bug 638 does not have problems.

2001-12-08  Eric Blake  <ebb9@email.byu.edu>

	* src/java.g: Update parser to have only one label per block.
	* src/javaact.cpp: Regenerate.
	* src/ast.cpp:
	* src/ast.h:
	* src/body.cpp:
	* src/definite.cpp:
	* src/unparse.cpp: Update label handling - bug 2483.